--- a/Client/src/html/contest.html
+++ b/Client/src/html/contest.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <br>
-                <textarea id="codeArea" class="dandap" placeholder="답 작성(띄어쓰기 x, 숫자만)"></textarea><br>
+                <textarea id="codeArea1" class="dandap" placeholder="답 작성(띄어쓰기 x, 숫자만)"></textarea><br>
                 <br>
                 <button class="submit-btn" onclick="showNextProblem('2')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
@@ -70,7 +70,7 @@
                 </div>
 
                 <br>
-                <textarea id="codeArea" class="dandap" placeholder="답 작성(띄어쓰기 x, 숫자만)"></textarea><br>
+                <textarea id="codeArea2" class="dandap" placeholder="답 작성(띄어쓰기 x, 숫자만)"></textarea><br>
                 <br>
                 <button class="submit-btn" onclick="showNextProblem('3')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
@@ -88,7 +88,7 @@
                 </div>
 
                 <br>
-                <textarea id="codeArea" class="dandap" placeholder="답 작성(띄어쓰기 x, 숫자만)"></textarea><br>
+                <textarea id="codeArea3" class="dandap" placeholder="답 작성(띄어쓰기 x, 숫자만)"></textarea><br>
                 <br>
                 <button class="submit-btn" onclick="showNextProblem('4')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
@@ -100,7 +100,7 @@
                 <h2>문제 4: 이 텍스트는 문제 4입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea4" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
                 <button id="runCode">채점 실행</button>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('5')">제출 및 다음 문제</button>
@@ -111,7 +111,7 @@
                 <h2>문제 5: 이 텍스트는 문제 5입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea5" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
                 <button id="runCode">채점 실행</button>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('6')">제출 및 다음 문제</button>
@@ -122,7 +122,7 @@
                 <h2>문제 6: 이 텍스트는 문제 6입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea6" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
                 <button id="runCode">채점 실행</button>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('7')">제출 및 다음 문제</button>
@@ -133,7 +133,7 @@
                 <h2>문제 7: 이 텍스트는 문제 7입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea7" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
                 <button id="runCode">채점 실행</button>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('8')">제출 및 다음 문제</button>
@@ -144,7 +144,7 @@
                 <h2>문제 8: 이 텍스트는 문제 8입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea8" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
                 <button id="runCode">채점 실행</button>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('9')">제출 및 다음 문제</button>
@@ -155,7 +155,7 @@
                 <h2>문제 9: 이 텍스트는 문제 9입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea9" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
                 <button id="runCode">채점 실행</button>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('10')">제출 및 다음 문제</button>
@@ -166,7 +166,7 @@
                 <h2>문제 10: 이 텍스트는 문제 10입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea10" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
                 <button id="runCode">채점 실행</button>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('problem4')">제출 및 종료</button>
