code editor bug fixed

--- a/Client/src/html/contest.html
+++ b/Client/src/html/contest.html
@@ -113,10 +113,13 @@
 
             <!-- 문제 3 (추가할 문제) -->
             <div id="4" class="problem">
-                <h2>문제 4: 이 텍스트는 문제 4입니다.</h2>
-                <p>문제를 풀어주세요!</p>
+                <h2>문제 4: 화면에 출력하기</h2>
+                <p>
+                    도현이는 친구를 만나 인사를 합니다.
+                    Hello를 출력하시오.
+                </p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea4" class="ccode" rows="15" cols="80" placeholder="//여기에 코드 작성"></textarea><br>
+                <textarea id="codeArea4" class="ccode" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('5')">제출 및 다음 문제</button>
             </div>
@@ -126,7 +129,7 @@
                 <h2>문제 5: 이 텍스트는 문제 5입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea5" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea5" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('6')">제출 및 다음 문제</button>
             </div>
@@ -136,7 +139,7 @@
                 <h2>문제 6: 이 텍스트는 문제 6입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea6" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea6" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('7')">제출 및 다음 문제</button>
             </div>
@@ -146,7 +149,7 @@
                 <h2>문제 7: 이 텍스트는 문제 7입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea7" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea7" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('8')">제출 및 다음 문제</button>
             </div>
@@ -156,7 +159,7 @@
                 <h2>문제 8: 이 텍스트는 문제 8입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea8" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea8" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('9')">제출 및 다음 문제</button>
             </div>
@@ -166,7 +169,7 @@
                 <h2>문제 9: 이 텍스트는 문제 9입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea9" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea9" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('10')">제출 및 다음 문제</button>
             </div>
@@ -176,7 +179,7 @@
                 <h2>문제 10: 이 텍스트는 문제 10입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea10" rows="15" cols="80">// 여기에 solution 함수 작성</textarea><br>
+                <textarea id="codeArea10" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('problem4')">제출 및 종료</button>
             </div>
