alert function & server log function added

--- a/Client/src/html/clientIndex.html
+++ b/Client/src/html/clientIndex.html
@@ -47,6 +47,7 @@
                     <div class="login-form-button">
                         <button id="login-button" class="login-button" role="button">서버 접속하기</button>
                     </div>
+                    <h5 id="login-alert"></h5>
                 </div>
         </div>
 
