--- a/Client/src/html/contest.html
+++ b/Client/src/html/contest.html
@@ -73,6 +73,7 @@
                 <button class="submit-btn" onclick="showNextProblem('2')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert1" class="alertBox"></h5>
             </div>
 
             <!-- 문제 2 -->
@@ -91,6 +92,7 @@
                 <button class="submit-btn" onclick="showNextProblem('3')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert2" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -109,6 +111,7 @@
                 <button class="submit-btn" onclick="showNextProblem('4')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert3" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -119,9 +122,12 @@
                     Hello를 출력하시오.
                 </p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea4" class="ccode" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
+                <textarea id="codeArea4" class="ccode" rows="15" cols="80"></textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('5')">제출 및 다음 문제</button>
+                <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
+                <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert4" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -129,9 +135,12 @@
                 <h2>문제 5: 이 텍스트는 문제 5입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea5" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
+                <textarea id="codeArea5" rows="15" cols="80"></textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('6')">제출 및 다음 문제</button>
+                <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
+                <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert5" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -139,9 +148,12 @@
                 <h2>문제 6: 이 텍스트는 문제 6입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea6" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
+                <textarea id="codeArea6" rows="15" cols="80"></textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('7')">제출 및 다음 문제</button>
+                <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
+                <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert6" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -149,9 +161,12 @@
                 <h2>문제 7: 이 텍스트는 문제 7입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea7" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
+                <textarea id="codeArea7" rows="15" cols="80"></textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('8')">제출 및 다음 문제</button>
+                <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
+                <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert7" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -159,9 +174,12 @@
                 <h2>문제 8: 이 텍스트는 문제 8입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea8" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
+                <textarea id="codeArea8" rows="15" cols="80"></textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('9')">제출 및 다음 문제</button>
+                <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
+                <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert8" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -169,9 +187,12 @@
                 <h2>문제 9: 이 텍스트는 문제 9입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea9" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
+                <textarea id="codeArea9" rows="15" cols="80"></textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('10')">제출 및 다음 문제</button>
+                <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
+                <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert9" class="alertBox"></h5>
             </div>
 
             <!-- 문제 3 (추가할 문제) -->
@@ -179,9 +200,12 @@
                 <h2>문제 10: 이 텍스트는 문제 10입니다.</h2>
                 <p>문제를 풀어주세요!</p>
                 <h2>C 코드 입력</h2>
-                <textarea id="codeArea10" rows="15" cols="80">// 여기에 코드 작성</textarea><br>
+                <textarea id="codeArea10" rows="15" cols="80"></textarea><br>
                 <pre id="resultArea"></pre>
                 <button class="submit-btn" onclick="showNextProblem('problem4')">제출 및 종료</button>
+                <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
+                <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5 id="alert10" class="alertBox"></h5>
             </div>
 
         </div>
