--- a/Server/src/html/serverIndex.html
+++ b/Server/src/html/serverIndex.html
@@ -7,6 +7,7 @@
       <script src="../js/controls/titleBarControl.js" defer></script>
       <script src="../js/server/serverButton.js" defer></script>
       <script src="../js/server/updateClientsInfo.js" defer></script>
+      <script src="../js/server_log/serverLog.js"></script>
     </head>
     <body>
       <div class="main-container">
@@ -94,7 +95,7 @@
             </div>
           </div>
           
-          <div class="server-log">
+          <div id="server-log" class="server-log">
 
           </div>
         </div>
