server stats bug fixed

--- a/Server/src/html/serverIndex.html
+++ b/Server/src/html/serverIndex.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="server-status-row">
                   <span class="label">접속자 수 :</span>
-                  <span class="value">0</span>
+                  <span id="clientCount" class="value">0</span>
                 </div>
               </div>
 
@@ -65,7 +65,7 @@
                 </div>
                 <div class="server-efficiency-row">
                   <span class="label">스레드 수 :</span>
-                  <span class="value">0 B/s</span>
+                  <span id="thread" class="value">0 B/s</span>
                 </div>
               </div>
             </div>
