--- a/Client/src/html/contest.html
+++ b/Client/src/html/contest.html
@@ -73,6 +73,7 @@
                 <button class="submit-btn" onclick="showNextProblem('2')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert1" class="alertBox"></h5>
             </div>
 
@@ -92,6 +93,7 @@
                 <button class="submit-btn" onclick="showNextProblem('3')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert2" class="alertBox"></h5>
             </div>
 
@@ -111,6 +113,7 @@
                 <button class="submit-btn" onclick="showNextProblem('4')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert3" class="alertBox"></h5>
             </div>
 
@@ -127,6 +130,7 @@
                 <button class="submit-btn" onclick="showNextProblem('5')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert4" class="alertBox"></h5>
             </div>
 
@@ -140,6 +144,7 @@
                 <button class="submit-btn" onclick="showNextProblem('6')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert5" class="alertBox"></h5>
             </div>
 
@@ -153,6 +158,7 @@
                 <button class="submit-btn" onclick="showNextProblem('7')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert6" class="alertBox"></h5>
             </div>
 
@@ -166,6 +172,7 @@
                 <button class="submit-btn" onclick="showNextProblem('8')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert7" class="alertBox"></h5>
             </div>
 
@@ -179,6 +186,7 @@
                 <button class="submit-btn" onclick="showNextProblem('9')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert8" class="alertBox"></h5>
             </div>
 
@@ -192,6 +200,7 @@
                 <button class="submit-btn" onclick="showNextProblem('10')">제출 및 다음 문제</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert9" class="alertBox"></h5>
             </div>
 
@@ -205,6 +214,7 @@
                 <button class="submit-btn" onclick="showNextProblem('problem4')">제출 및 종료</button>
                 <h5>⚠️모든 문제는 1~4점 랜덤 부여됩니다.</h5>
                 <h5>⚠️공백 없이 숫자만 적어주세요!</h5>
+                <h5>⚠️제출 버튼을 누르면 뒤로 돌아갈 수 없습니다!</h5>
                 <h5 id="alert10" class="alertBox"></h5>
             </div>
 
