--- a/Client/src/html/standby.html
+++ b/Client/src/html/standby.html
@@ -46,6 +46,8 @@
             <p>ℹ️ 코드의 timeout은 3초로 매우 긴 시간이니 무한 루프에 빠지지 않게 잘 확인하세요 >ㅡ </p>
             <br>
             <p>⚠️ 문제를 다 풀었거나 대회가 종료되어도 점수 확인을 위해 프로그램을 종료하지 마세요!</p>
+            <br>
+            <p>⚠️ 코드는 랜덤 테스트 케이스를 통해 컴파일 되니까 하드코딩은 안됩니다!</p>
         </div>
 
         <div class="footbar">
