--- a/Client/src/html/contestFinished.html
+++ b/Client/src/html/contestFinished.html
@@ -39,6 +39,8 @@
                         대회가 종료되었습니다!
                         <br>
                         모두 수고하셨습니다^^
+                        <br>
+                        점수 집계를 위해 프로그램을 종료하지 마세요!
                     </div>
         </div>
 
